deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poker-aa
  labels:
    app.kubernetes.io/part-of: poker-aa
